# system_learning

./: .gitignore  README.md  pyproject.toml
system_learning/: manage.py
system_learning/api/: serializers.py  urls.py  views.py
system_learning/products/: admin.py  models.py
system_learning/products/migrations/: 0001_initial.py
system_learning/system_learning/: asgi.py  settings.py  urls.py  wsgi.py
