[tool.poetry]
name = "system-learning"
version = "0.1.0"
description = ""
authors = ["Владислав Береснев <vladislaw.beresnev2018@yandex.ru>"]
readme = "README.md"
packages = [{include = "system_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "3.12.4"
django = "3.2"
black = "^23.9.1"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.3.0"
drf-yasg = "^1.21.7"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
